[package]
name = "voyagers_of_the_cluster"
version = "0.1.0"
authors = ["Werner Kroneman <w.kroneman@ucr.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.31.0"
serde = "1.0.130"
nalgebra = "0.26.2"
rapier3d = "0.11.1"
slotmap = "1.0.6"
typemap = "0.3.3"
rand = "0.8.4"
retain_mut = "0.1.3"
comparator = "0.2.1"